fix flexbox layout problems

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,5 @@
 .app-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.app-weather-container {
-  display: flex;
-  flex-direction: row;
+  text-align: center;
 }
 .app-weather-title {
   font-size: 2rem;
